[package]
name = "conclave-room"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Logic for a Conclave Room"
repository = "https://github.com/piot/conclave-room-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build]
rustflags = ["-D", "warnings"]